<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>ultraleap</name>
	<version>0.0.0</version>
	<description>Publish Ultraleap (previously Leap Motion) hand tracking data. </description>
	<maintainer email="dylan.moss2001@gmail.com">Dylan Moss</maintainer>
	<license>CC BY-NC 4.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>

	<depend>ultraleap_msgs</depend>
	
	<exec_depend>ros2launch</exec_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<build_depend>rosidl_default_generators</build_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>
	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>